// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecurityStack Construct(SecurityStack):  Snapshot Test 1`] = `
Object {
  "Parameters": Object {
    "SsmParameterValueacceleratorkmscloudwatchkeyarnC96584B6F00A464EAD1953AFF4B05118Parameter": Object {
      "Default": "/accelerator/kms/cloudwatch/key-arn",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "AWSAcceleratormetadatacollectionLogGroup76F89C67": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "KmsKeyId": Object {
          "Ref": "SsmParameterValueacceleratorkmscloudwatchkeyarnC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "LogGroupName": "/aws/lambda/AWSAccelerator-metadata-collection",
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "AcceleratorMetadataAWSAcceleratormetadatacollectionEBD85CF6": Object {
      "DependsOn": Array [
        "AcceleratorMetadataMetadataLambdaDefaultPolicy03C222B6",
        "AcceleratorMetadataMetadataLambdaC27FFAF6",
        "AWSAcceleratormetadatacollectionLogGroup76F89C67",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Environment": Object {
          "Variables": Object {
            "ACCELERATOR_PREFIX": "AWSAccelerator",
            "CENTRAL_LOG_BUCKET": "aws-accelerator-central-logs-333333333333-us-west-2",
            "CONFIG_REPOSITORY_NAME": "aws-accelerator-config",
            "CROSS_ACCOUNT_ROLE": "AWSControlTowerExecution",
            "ELB_LOGGING_BUCKET": "aws-accelerator-elb-access-logs-333333333333-us-west-2",
            "GLOBAL_REGION": "us-east-1",
            "LOG_ACCOUNT_ID": "333333333333",
            "METADATA_BUCKET": "aws-accelerator-metadata-333333333333-us-east-1",
            "ORGANIZATION_ID": "r-asdf",
            "PARTITION": Object {
              "Ref": "AWS::Partition",
            },
          },
        },
        "FunctionName": "AWSAccelerator-metadata-collection",
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "AcceleratorMetadataMetadataLambdaC27FFAF6",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 600,
      },
      "Type": "AWS::Lambda::Function",
    },
    "AcceleratorMetadataAwsAcceleratorMetadataCollectionRule1FFE12D2": Object {
      "Properties": Object {
        "Name": "AWSAccelerator-metadata-collection-rule",
        "ScheduleExpression": "rate(1 day)",
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "AcceleratorMetadataAWSAcceleratormetadatacollectionEBD85CF6",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "AcceleratorMetadataAwsAcceleratorMetadataCollectionRuleAllowEventRuleAWSAcceleratorSecurityStack111111111111useast1AcceleratorMetadataAWSAcceleratormetadatacollection72A1EADD690CC386": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "AcceleratorMetadataAWSAcceleratormetadatacollectionEBD85CF6",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": Object {
          "Fn::GetAtt": Array [
            "AcceleratorMetadataAwsAcceleratorMetadataCollectionRule1FFE12D2",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "AcceleratorMetadataMetadataLambdaC27FFAF6": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "RoleName": "AWSAccelerator-111111111111-us-east-1-metadata-lambda-role",
      },
      "Type": "AWS::IAM::Role",
    },
    "AcceleratorMetadataMetadataLambdaDefaultPolicy03C222B6": Object {
      "Metadata": Object {
        "cdk_nag": Object {
          "rules_to_suppress": Array [
            Object {
              "id": "AwsSolutions-IAM5",
              "reason": "accelerator metadata collection custom resource",
            },
          ],
        },
      },
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "codepipeline:GetPipelineExecution",
                "codepipeline:ListPipelineExecutions",
                "codecommit:GetFolder",
                "codecommit:GetFile",
                "kms:DescribeKey",
                "kms:Decrypt",
                "kms:Encrypt",
                "kms:ReEncrypt*",
                "kms:GenerateDataKey*",
                "kms:ListAliases",
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
                "organizations:DescribeOrganizationalUnit",
                "organizations:DescribeAccount",
                "organizations:ListAccounts",
                "organizations:ListChildren",
                "organizations:ListOrganizationalUnitsForParent",
                "organizations:ListParents",
                "organizations:ListRoots",
                "ssm:GetParameter",
                "sts:AssumeRole",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            Object {
              "Action": Array [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObjectAcl",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::aws-accelerator-metadata-333333333333-us-east-1",
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::aws-accelerator-metadata-333333333333-us-east-1/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AcceleratorMetadataMetadataLambdaDefaultPolicy03C222B6",
        "Roles": Array [
          Object {
            "Ref": "AcceleratorMetadataMetadataLambdaC27FFAF6",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "AwsMacieUpdateExportConfigClassification832781E3": Object {
      "DeletionPolicy": "Delete",
      "DependsOn": Array [
        "CustomMaciePutClassificationExportConfigurationCustomResourceProviderLogGroup727354F4",
      ],
      "Properties": Object {
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomMaciePutClassificationExportConfigurationCustomResourceProviderHandlerC53E2FCC",
            "Arn",
          ],
        },
        "bucketName": "aws-accelerator-central-logs-333333333333-us-west-2",
        "keyPrefix": "macie/111111111111/",
        "kmsKeyArn": Object {
          "Ref": "CentralLogsBucketKeyLookup52CD8A37",
        },
        "region": "us-east-1",
      },
      "Type": "Custom::MaciePutClassificationExportConfiguration",
      "UpdateReplacePolicy": "Delete",
    },
    "CentralLogsBucketKeyLookup52CD8A37": Object {
      "DeletionPolicy": "Delete",
      "DependsOn": Array [
        "CustomSsmGetParameterValueCustomResourceProviderLogGroup780D220D",
      ],
      "Properties": Object {
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomSsmGetParameterValueCustomResourceProviderHandlerAAD0E7EE",
            "Arn",
          ],
        },
        "assumeRoleArn": Object {
          "Fn::Join": Array [
            "",
            Array [
              "arn:",
              Object {
                "Ref": "AWS::Partition",
              },
              ":iam::333333333333:role/AWSAccelerator-CentralBucket-KeyArnParam-Role",
            ],
          ],
        },
        "invokingAccountID": "111111111111",
        "invokingRegion": "us-east-1",
        "parameterAccountID": "333333333333",
        "parameterName": "/accelerator/logging/central-bucket/kms/arn",
        "parameterRegion": "us-west-2",
        "uuid": "REPLACED-UUID",
      },
      "Type": "Custom::SsmGetParameterValue",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomEbsDefaultVolumeEncryptionCustomResourceProviderHandler6551B35B": Object {
      "DependsOn": Array [
        "CustomEbsDefaultVolumeEncryptionCustomResourceProviderRole7A4FA6A8",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomEbsDefaultVolumeEncryptionCustomResourceProviderRole7A4FA6A8",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomEbsDefaultVolumeEncryptionCustomResourceProviderLogGroupB7212213": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "KmsKeyId": Object {
          "Ref": "SsmParameterValueacceleratorkmscloudwatchkeyarnC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "LogGroupName": Object {
          "Fn::Join": Array [
            "",
            Array [
              "/aws/lambda/",
              Object {
                "Ref": "CustomEbsDefaultVolumeEncryptionCustomResourceProviderHandler6551B35B",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomEbsDefaultVolumeEncryptionCustomResourceProviderRole7A4FA6A8": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "ec2:DisableEbsEncryptionByDefault",
                    "ec2:EnableEbsEncryptionByDefault",
                    "ec2:ModifyEbsDefaultKmsKeyId",
                    "ec2:ResetEbsDefaultKmsKeyId",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                  "Sid": "EC2",
                },
                Object {
                  "Action": Array [
                    "kms:DescribeKey",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::GetAtt": Array [
                      "EbsEncryptionKey9149E0DA",
                      "Arn",
                    ],
                  },
                  "Sid": "KMS",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderHandlerB3AE4CE8": Object {
      "DependsOn": Array [
        "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderRoleD01DD26B",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderRoleD01DD26B",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderLogGroup118A06DB": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "KmsKeyId": Object {
          "Ref": "SsmParameterValueacceleratorkmscloudwatchkeyarnC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "LogGroupName": Object {
          "Fn::Join": Array [
            "",
            Array [
              "/aws/lambda/",
              Object {
                "Ref": "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderHandlerB3AE4CE8",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderRoleD01DD26B": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "guardDuty:CreateDetector",
                    "guardDuty:CreatePublishingDestination",
                    "guardDuty:DeletePublishingDestination",
                    "guardDuty:UpdatePublishingDestination",
                    "guardDuty:ListDetectors",
                    "guardDuty:ListPublishingDestinations",
                    "guardduty:DescribePublishingDestination",
                    "iam:CreateServiceLinkedRole",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                  "Sid": "GuardDutyCreatePublishingDestinationCommandTaskGuardDutyActions",
                },
                Object {
                  "Action": Array [
                    "s3:ListBucket",
                    "s3:GetObject",
                  ],
                  "Effect": "Allow",
                  "Resource": Array [
                    Object {
                      "Fn::Join": Array [
                        "",
                        Array [
                          "arn:",
                          Object {
                            "Ref": "AWS::Partition",
                          },
                          ":s3:::aws-accelerator-central-logs-333333333333-us-west-2/guardduty",
                        ],
                      ],
                    },
                    Object {
                      "Fn::Join": Array [
                        "",
                        Array [
                          "arn:",
                          Object {
                            "Ref": "AWS::Partition",
                          },
                          ":s3:::aws-accelerator-central-logs-333333333333-us-west-2/guardduty/*",
                        ],
                      ],
                    },
                  ],
                  "Sid": "GuardDutyCreateBucketPrefix",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderHandler63EDC7F4": Object {
      "DependsOn": Array [
        "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderRoleC4ECAFE0",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderRoleC4ECAFE0",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderLogGroup69C2279A": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "KmsKeyId": Object {
          "Ref": "SsmParameterValueacceleratorkmscloudwatchkeyarnC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "LogGroupName": Object {
          "Fn::Join": Array [
            "",
            Array [
              "/aws/lambda/",
              Object {
                "Ref": "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderHandler63EDC7F4",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderRoleC4ECAFE0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "iam:UpdateAccountPasswordPolicy",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomMaciePutClassificationExportConfigurationCustomResourceProviderHandlerC53E2FCC": Object {
      "DependsOn": Array [
        "CustomMaciePutClassificationExportConfigurationCustomResourceProviderRoleEB42D531",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomMaciePutClassificationExportConfigurationCustomResourceProviderRoleEB42D531",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomMaciePutClassificationExportConfigurationCustomResourceProviderLogGroup727354F4": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "KmsKeyId": Object {
          "Ref": "SsmParameterValueacceleratorkmscloudwatchkeyarnC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "LogGroupName": Object {
          "Fn::Join": Array [
            "",
            Array [
              "/aws/lambda/",
              Object {
                "Ref": "CustomMaciePutClassificationExportConfigurationCustomResourceProviderHandlerC53E2FCC",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomMaciePutClassificationExportConfigurationCustomResourceProviderRoleEB42D531": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "macie2:EnableMacie",
                    "macie2:GetClassificationExportConfiguration",
                    "macie2:GetMacieSession",
                    "macie2:PutClassificationExportConfiguration",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                  "Sid": "MaciePutClassificationExportConfigurationTaskMacieActions",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomSecurityHubBatchEnableStandardsCustomResourceProviderHandler4BE622C1": Object {
      "DependsOn": Array [
        "CustomSecurityHubBatchEnableStandardsCustomResourceProviderRole1ABC8ED2",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomSecurityHubBatchEnableStandardsCustomResourceProviderRole1ABC8ED2",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomSecurityHubBatchEnableStandardsCustomResourceProviderLogGroup51D3B0EA": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "KmsKeyId": Object {
          "Ref": "SsmParameterValueacceleratorkmscloudwatchkeyarnC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "LogGroupName": Object {
          "Fn::Join": Array [
            "",
            Array [
              "/aws/lambda/",
              Object {
                "Ref": "CustomSecurityHubBatchEnableStandardsCustomResourceProviderHandler4BE622C1",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomSecurityHubBatchEnableStandardsCustomResourceProviderRole1ABC8ED2": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "securityhub:BatchDisableStandards",
                    "securityhub:BatchEnableStandards",
                    "securityhub:DescribeStandards",
                    "securityhub:DescribeStandardsControls",
                    "securityhub:EnableSecurityHub",
                    "securityhub:GetEnabledStandards",
                    "securityhub:UpdateStandardsControl",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                  "Sid": "SecurityHubCreateMembersTaskSecurityHubActions",
                },
                Object {
                  "Action": Array [
                    "iam:CreateServiceLinkedRole",
                  ],
                  "Condition": Object {
                    "StringLike": Object {
                      "iam:AWSServiceName": "securityhub.amazonaws.com",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                  "Sid": "SecurityHubServiceLinkedRole",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomSsmGetParameterValueCustomResourceProviderHandlerAAD0E7EE": Object {
      "DependsOn": Array [
        "CustomSsmGetParameterValueCustomResourceProviderRoleB3AFDDB2",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomSsmGetParameterValueCustomResourceProviderRoleB3AFDDB2",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomSsmGetParameterValueCustomResourceProviderLogGroup780D220D": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "LogGroupName": Object {
          "Fn::Join": Array [
            "",
            Array [
              "/aws/lambda/",
              Object {
                "Ref": "CustomSsmGetParameterValueCustomResourceProviderHandlerAAD0E7EE",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomSsmGetParameterValueCustomResourceProviderRoleB3AFDDB2": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "ssm:GetParameters",
                    "ssm:GetParameter",
                    "ssm:DescribeParameters",
                  ],
                  "Effect": "Allow",
                  "Resource": Array [
                    "*",
                  ],
                  "Sid": "SsmGetParameterActions",
                },
                Object {
                  "Action": Array [
                    "sts:AssumeRole",
                  ],
                  "Effect": "Allow",
                  "Resource": Array [
                    Object {
                      "Fn::Join": Array [
                        "",
                        Array [
                          "arn:",
                          Object {
                            "Ref": "AWS::Partition",
                          },
                          ":iam::*:role/AWSAccelerator*",
                        ],
                      ],
                    },
                  ],
                  "Sid": "StsAssumeRoleActions",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "EbsDefaultVolumeEncryption55012F7A": Object {
      "DeletionPolicy": "Delete",
      "DependsOn": Array [
        "CustomEbsDefaultVolumeEncryptionCustomResourceProviderLogGroupB7212213",
      ],
      "Properties": Object {
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomEbsDefaultVolumeEncryptionCustomResourceProviderHandler6551B35B",
            "Arn",
          ],
        },
        "kmsKeyId": Object {
          "Ref": "EbsEncryptionKey9149E0DA",
        },
      },
      "Type": "Custom::EbsDefaultVolumeEncryption",
      "UpdateReplacePolicy": "Delete",
    },
    "EbsDefaultVolumeEncryptionParameter61CF6625": Object {
      "Properties": Object {
        "Name": "/accelerator/security-stack/ebsDefaultVolumeEncryptionKeyArn",
        "Type": "String",
        "Value": Object {
          "Fn::GetAtt": Array [
            "EbsEncryptionKey9149E0DA",
            "Arn",
          ],
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
    "EbsEncryptionKey9149E0DA": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "Description": "AWS Accelerator default EBS Volume Encryption key",
        "EnableKeyRotation": true,
        "KeyPolicy": Object {
          "Statement": Array [
            Object {
              "Action": "kms:*",
              "Effect": "Allow",
              "Principal": Object {
                "AWS": Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::111111111111:root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
            Object {
              "Action": Array [
                "kms:Decrypt",
                "kms:DescribeKey",
                "kms:Encrypt",
                "kms:GenerateDataKey*",
                "kms:ReEncrypt*",
              ],
              "Effect": "Allow",
              "Principal": Object {
                "AWS": Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::111111111111:role/aws-service-role/autoscaling.amazonaws.com/AWSServiceRoleForAutoScaling",
                    ],
                  ],
                },
              },
              "Resource": "*",
              "Sid": "Allow service-linked role use",
            },
            Object {
              "Action": "kms:CreateGrant",
              "Condition": Object {
                "Bool": Object {
                  "kms:GrantIsForAWSResource": "true",
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::111111111111:role/aws-service-role/autoscaling.amazonaws.com/AWSServiceRoleForAutoScaling",
                    ],
                  ],
                },
              },
              "Resource": "*",
              "Sid": "Allow Autoscaling to create grant",
            },
            Object {
              "Action": "kms:*",
              "Effect": "Allow",
              "Principal": Object {
                "AWS": Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::111111111111:root",
                    ],
                  ],
                },
              },
              "Resource": "*",
              "Sid": "Account Access",
            },
            Object {
              "Action": "kms:*",
              "Condition": Object {
                "StringEquals": Object {
                  "kms:CallerAccount": "111111111111",
                  "kms:ViaService": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "ec2.111111111111.",
                        Object {
                          "Ref": "AWS::URLSuffix",
                        },
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": "*",
              "Sid": "ec2",
            },
            Object {
              "Action": Array [
                "kms:Decrypt",
                "kms:DescribeKey",
                "kms:Encrypt",
                "kms:GenerateDataKey*",
                "kms:ReEncrypt*",
              ],
              "Effect": "Allow",
              "Principal": Object {
                "AWS": Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::111111111111:role/aws-service-role/cloud9.amazonaws.com/AWSServiceRoleForAWSCloud9",
                    ],
                  ],
                },
              },
              "Resource": "*",
              "Sid": "Allow cloud9 service-linked role use",
            },
            Object {
              "Action": Array [
                "kms:CreateGrant",
                "kms:ListGrants",
                "kms:RevokeGrant",
              ],
              "Condition": Object {
                "Bool": Object {
                  "kms:GrantIsForAWSResource": "true",
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::111111111111:role/aws-service-role/cloud9.amazonaws.com/AWSServiceRoleForAWSCloud9",
                    ],
                  ],
                },
              },
              "Resource": "*",
              "Sid": "Allow cloud9 attachment of persistent resources",
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::KMS::Key",
      "UpdateReplacePolicy": "Retain",
    },
    "EbsEncryptionKeyAlias4A392FEE": Object {
      "Properties": Object {
        "AliasName": "alias/accelerator/ebs/default-encryption/key",
        "TargetKeyId": Object {
          "Fn::GetAtt": Array [
            "EbsEncryptionKey9149E0DA",
            "Arn",
          ],
        },
      },
      "Type": "AWS::KMS::Alias",
    },
    "GuardDutyPublishingDestination52AE4412": Object {
      "DeletionPolicy": "Delete",
      "DependsOn": Array [
        "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderLogGroup118A06DB",
      ],
      "Properties": Object {
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderHandlerB3AE4CE8",
            "Arn",
          ],
        },
        "destinationArn": Object {
          "Fn::Join": Array [
            "",
            Array [
              "arn:",
              Object {
                "Ref": "AWS::Partition",
              },
              ":s3:::aws-accelerator-central-logs-333333333333-us-west-2/guardduty",
            ],
          ],
        },
        "exportDestinationOverride": true,
        "exportDestinationType": "S3",
        "kmsKeyArn": Object {
          "Ref": "CentralLogsBucketKeyLookup52CD8A37",
        },
        "region": "us-east-1",
      },
      "Type": "Custom::GuardDutyCreatePublishingDestinationCommand",
      "UpdateReplacePolicy": "Delete",
    },
    "IamPasswordPolicy7117FCDB": Object {
      "DeletionPolicy": "Delete",
      "DependsOn": Array [
        "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderLogGroup69C2279A",
      ],
      "Properties": Object {
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderHandler63EDC7F4",
            "Arn",
          ],
        },
        "allowUsersToChangePassword": true,
        "hardExpiry": false,
        "maxPasswordAge": 90,
        "minimumPasswordLength": 14,
        "passwordReusePrevention": 24,
        "requireLowercaseCharacters": true,
        "requireNumbers": true,
        "requireSymbols": true,
        "requireUppercaseCharacters": true,
      },
      "Type": "Custom::IamUpdateAccountPasswordPolicy",
      "UpdateReplacePolicy": "Delete",
    },
    "SecurityHubStandards294083BB": Object {
      "DeletionPolicy": "Delete",
      "DependsOn": Array [
        "CustomSecurityHubBatchEnableStandardsCustomResourceProviderLogGroup51D3B0EA",
      ],
      "Properties": Object {
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomSecurityHubBatchEnableStandardsCustomResourceProviderHandler4BE622C1",
            "Arn",
          ],
        },
        "region": "us-east-1",
        "standards": Array [
          Object {
            "controlsToDisable": Array [
              "IAM.1",
              "EC2.10",
              "Lambda.4",
            ],
            "enable": true,
            "name": "AWS Foundational Security Best Practices v1.0.0",
          },
          Object {
            "controlsToDisable": Array [
              "PCI.IAM.3",
              "PCI.S3.3",
              "PCI.EC2.3",
              "PCI.Lambda.2",
            ],
            "enable": true,
            "name": "PCI DSS v3.2.1",
          },
          Object {
            "controlsToDisable": Array [
              "CIS.1.20",
              "CIS.1.22",
              "CIS.2.6",
            ],
            "enable": true,
            "name": "CIS AWS Foundations Benchmark v1.2.0",
          },
        ],
      },
      "Type": "Custom::SecurityHubBatchEnableStandards",
      "UpdateReplacePolicy": "Delete",
    },
    "SsmParamAcceleratorVersionFF83282D": Object {
      "Properties": Object {
        "Name": "/accelerator/AWSAccelerator-SecurityStack-111111111111-us-east-1/version",
        "Type": "String",
        "Value": "1.3.0",
      },
      "Type": "AWS::SSM::Parameter",
    },
    "SsmParamStackId521A78D3": Object {
      "Properties": Object {
        "Name": "/accelerator/AWSAccelerator-SecurityStack-111111111111-us-east-1/stack-id",
        "Type": "String",
        "Value": Object {
          "Ref": "AWS::StackId",
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
  },
}
`;

exports[`delegatedAdminStack Construct(SecurityStack):  Snapshot Test 1`] = `
Object {
  "Parameters": Object {
    "SsmParameterValueacceleratorkmscloudwatchkeyarnC96584B6F00A464EAD1953AFF4B05118Parameter": Object {
      "Default": "/accelerator/kms/cloudwatch/key-arn",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValueacceleratorkmskey1keyarnC96584B6F00A464EAD1953AFF4B05118Parameter": Object {
      "Default": "/accelerator/kms/key1/key-arn",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "AWSAcceleratormetadatacollectionLogGroup76F89C67": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "KmsKeyId": Object {
          "Ref": "SsmParameterValueacceleratorkmscloudwatchkeyarnC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "LogGroupName": "/aws/lambda/AWSAccelerator-metadata-collection",
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "AcceleratorMetadataAWSAcceleratormetadatacollectionEBD85CF6": Object {
      "DependsOn": Array [
        "AcceleratorMetadataMetadataLambdaDefaultPolicy03C222B6",
        "AcceleratorMetadataMetadataLambdaC27FFAF6",
        "AWSAcceleratormetadatacollectionLogGroup76F89C67",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Environment": Object {
          "Variables": Object {
            "ACCELERATOR_PREFIX": "AWSAccelerator",
            "CENTRAL_LOG_BUCKET": "aws-accelerator-central-logs-333333333333-us-west-2",
            "CONFIG_REPOSITORY_NAME": "aws-accelerator-config",
            "CROSS_ACCOUNT_ROLE": "AWSControlTowerExecution",
            "ELB_LOGGING_BUCKET": "aws-accelerator-elb-access-logs-333333333333-us-west-2",
            "GLOBAL_REGION": "us-east-1",
            "LOG_ACCOUNT_ID": "333333333333",
            "METADATA_BUCKET": "aws-accelerator-metadata-333333333333-us-east-1",
            "ORGANIZATION_ID": "r-asdf",
            "PARTITION": Object {
              "Ref": "AWS::Partition",
            },
          },
        },
        "FunctionName": "AWSAccelerator-metadata-collection",
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "AcceleratorMetadataMetadataLambdaC27FFAF6",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 600,
      },
      "Type": "AWS::Lambda::Function",
    },
    "AcceleratorMetadataAwsAcceleratorMetadataCollectionRule1FFE12D2": Object {
      "Properties": Object {
        "Name": "AWSAccelerator-metadata-collection-rule",
        "ScheduleExpression": "rate(1 day)",
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "AcceleratorMetadataAWSAcceleratormetadatacollectionEBD85CF6",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "AcceleratorMetadataAwsAcceleratorMetadataCollectionRuleAllowEventRuleAWSAcceleratorSecurityStack111111111111useast1AcceleratorMetadataAWSAcceleratormetadatacollection72A1EADD690CC386": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "AcceleratorMetadataAWSAcceleratormetadatacollectionEBD85CF6",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": Object {
          "Fn::GetAtt": Array [
            "AcceleratorMetadataAwsAcceleratorMetadataCollectionRule1FFE12D2",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "AcceleratorMetadataMetadataLambdaC27FFAF6": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "RoleName": "AWSAccelerator-111111111111-us-east-1-metadata-lambda-role",
      },
      "Type": "AWS::IAM::Role",
    },
    "AcceleratorMetadataMetadataLambdaDefaultPolicy03C222B6": Object {
      "Metadata": Object {
        "cdk_nag": Object {
          "rules_to_suppress": Array [
            Object {
              "id": "AwsSolutions-IAM5",
              "reason": "accelerator metadata collection custom resource",
            },
          ],
        },
      },
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "codepipeline:GetPipelineExecution",
                "codepipeline:ListPipelineExecutions",
                "codecommit:GetFolder",
                "codecommit:GetFile",
                "kms:DescribeKey",
                "kms:Decrypt",
                "kms:Encrypt",
                "kms:ReEncrypt*",
                "kms:GenerateDataKey*",
                "kms:ListAliases",
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
                "organizations:DescribeOrganizationalUnit",
                "organizations:DescribeAccount",
                "organizations:ListAccounts",
                "organizations:ListChildren",
                "organizations:ListOrganizationalUnitsForParent",
                "organizations:ListParents",
                "organizations:ListRoots",
                "ssm:GetParameter",
                "sts:AssumeRole",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            Object {
              "Action": Array [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObjectAcl",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::aws-accelerator-metadata-333333333333-us-east-1",
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::aws-accelerator-metadata-333333333333-us-east-1/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "AcceleratorMetadataMetadataLambdaDefaultPolicy03C222B6",
        "Roles": Array [
          Object {
            "Ref": "AcceleratorMetadataMetadataLambdaC27FFAF6",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "AwsMacieUpdateExportConfigClassification832781E3": Object {
      "DeletionPolicy": "Delete",
      "DependsOn": Array [
        "CustomMaciePutClassificationExportConfigurationCustomResourceProviderLogGroup727354F4",
      ],
      "Properties": Object {
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomMaciePutClassificationExportConfigurationCustomResourceProviderHandlerC53E2FCC",
            "Arn",
          ],
        },
        "bucketName": "aws-accelerator-central-logs-333333333333-us-west-2",
        "keyPrefix": "macie/111111111111/",
        "kmsKeyArn": Object {
          "Ref": "CentralLogsBucketKeyLookup52CD8A37",
        },
        "region": "us-east-1",
      },
      "Type": "Custom::MaciePutClassificationExportConfiguration",
      "UpdateReplacePolicy": "Delete",
    },
    "CentralLogsBucketKeyLookup52CD8A37": Object {
      "DeletionPolicy": "Delete",
      "DependsOn": Array [
        "CustomSsmGetParameterValueCustomResourceProviderLogGroup780D220D",
      ],
      "Properties": Object {
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomSsmGetParameterValueCustomResourceProviderHandlerAAD0E7EE",
            "Arn",
          ],
        },
        "assumeRoleArn": Object {
          "Fn::Join": Array [
            "",
            Array [
              "arn:",
              Object {
                "Ref": "AWS::Partition",
              },
              ":iam::333333333333:role/AWSAccelerator-CentralBucket-KeyArnParam-Role",
            ],
          ],
        },
        "invokingAccountID": "111111111111",
        "invokingRegion": "us-east-1",
        "parameterAccountID": "333333333333",
        "parameterName": "/accelerator/logging/central-bucket/kms/arn",
        "parameterRegion": "us-west-2",
        "uuid": "REPLACED-UUID",
      },
      "Type": "Custom::SsmGetParameterValue",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomEbsDefaultVolumeEncryptionCustomResourceProviderHandler6551B35B": Object {
      "DependsOn": Array [
        "CustomEbsDefaultVolumeEncryptionCustomResourceProviderRole7A4FA6A8",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomEbsDefaultVolumeEncryptionCustomResourceProviderRole7A4FA6A8",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomEbsDefaultVolumeEncryptionCustomResourceProviderLogGroupB7212213": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "KmsKeyId": Object {
          "Ref": "SsmParameterValueacceleratorkmscloudwatchkeyarnC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "LogGroupName": Object {
          "Fn::Join": Array [
            "",
            Array [
              "/aws/lambda/",
              Object {
                "Ref": "CustomEbsDefaultVolumeEncryptionCustomResourceProviderHandler6551B35B",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomEbsDefaultVolumeEncryptionCustomResourceProviderRole7A4FA6A8": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "ec2:DisableEbsEncryptionByDefault",
                    "ec2:EnableEbsEncryptionByDefault",
                    "ec2:ModifyEbsDefaultKmsKeyId",
                    "ec2:ResetEbsDefaultKmsKeyId",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                  "Sid": "EC2",
                },
                Object {
                  "Action": Array [
                    "kms:DescribeKey",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Ref": "SsmParameterValueacceleratorkmskey1keyarnC96584B6F00A464EAD1953AFF4B05118Parameter",
                  },
                  "Sid": "KMS",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderHandlerB3AE4CE8": Object {
      "DependsOn": Array [
        "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderRoleD01DD26B",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderRoleD01DD26B",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderLogGroup118A06DB": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "KmsKeyId": Object {
          "Ref": "SsmParameterValueacceleratorkmscloudwatchkeyarnC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "LogGroupName": Object {
          "Fn::Join": Array [
            "",
            Array [
              "/aws/lambda/",
              Object {
                "Ref": "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderHandlerB3AE4CE8",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderRoleD01DD26B": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "guardDuty:CreateDetector",
                    "guardDuty:CreatePublishingDestination",
                    "guardDuty:DeletePublishingDestination",
                    "guardDuty:UpdatePublishingDestination",
                    "guardDuty:ListDetectors",
                    "guardDuty:ListPublishingDestinations",
                    "guardduty:DescribePublishingDestination",
                    "iam:CreateServiceLinkedRole",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                  "Sid": "GuardDutyCreatePublishingDestinationCommandTaskGuardDutyActions",
                },
                Object {
                  "Action": Array [
                    "s3:ListBucket",
                    "s3:GetObject",
                  ],
                  "Effect": "Allow",
                  "Resource": Array [
                    Object {
                      "Fn::Join": Array [
                        "",
                        Array [
                          "arn:",
                          Object {
                            "Ref": "AWS::Partition",
                          },
                          ":s3:::aws-accelerator-central-logs-333333333333-us-west-2/guardduty",
                        ],
                      ],
                    },
                    Object {
                      "Fn::Join": Array [
                        "",
                        Array [
                          "arn:",
                          Object {
                            "Ref": "AWS::Partition",
                          },
                          ":s3:::aws-accelerator-central-logs-333333333333-us-west-2/guardduty/*",
                        ],
                      ],
                    },
                  ],
                  "Sid": "GuardDutyCreateBucketPrefix",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderHandler63EDC7F4": Object {
      "DependsOn": Array [
        "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderRoleC4ECAFE0",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderRoleC4ECAFE0",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderLogGroup69C2279A": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "KmsKeyId": Object {
          "Ref": "SsmParameterValueacceleratorkmscloudwatchkeyarnC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "LogGroupName": Object {
          "Fn::Join": Array [
            "",
            Array [
              "/aws/lambda/",
              Object {
                "Ref": "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderHandler63EDC7F4",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderRoleC4ECAFE0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "iam:UpdateAccountPasswordPolicy",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomMaciePutClassificationExportConfigurationCustomResourceProviderHandlerC53E2FCC": Object {
      "DependsOn": Array [
        "CustomMaciePutClassificationExportConfigurationCustomResourceProviderRoleEB42D531",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomMaciePutClassificationExportConfigurationCustomResourceProviderRoleEB42D531",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomMaciePutClassificationExportConfigurationCustomResourceProviderLogGroup727354F4": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "KmsKeyId": Object {
          "Ref": "SsmParameterValueacceleratorkmscloudwatchkeyarnC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "LogGroupName": Object {
          "Fn::Join": Array [
            "",
            Array [
              "/aws/lambda/",
              Object {
                "Ref": "CustomMaciePutClassificationExportConfigurationCustomResourceProviderHandlerC53E2FCC",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomMaciePutClassificationExportConfigurationCustomResourceProviderRoleEB42D531": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "macie2:EnableMacie",
                    "macie2:GetClassificationExportConfiguration",
                    "macie2:GetMacieSession",
                    "macie2:PutClassificationExportConfiguration",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                  "Sid": "MaciePutClassificationExportConfigurationTaskMacieActions",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomSecurityHubBatchEnableStandardsCustomResourceProviderHandler4BE622C1": Object {
      "DependsOn": Array [
        "CustomSecurityHubBatchEnableStandardsCustomResourceProviderRole1ABC8ED2",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomSecurityHubBatchEnableStandardsCustomResourceProviderRole1ABC8ED2",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomSecurityHubBatchEnableStandardsCustomResourceProviderLogGroup51D3B0EA": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "KmsKeyId": Object {
          "Ref": "SsmParameterValueacceleratorkmscloudwatchkeyarnC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "LogGroupName": Object {
          "Fn::Join": Array [
            "",
            Array [
              "/aws/lambda/",
              Object {
                "Ref": "CustomSecurityHubBatchEnableStandardsCustomResourceProviderHandler4BE622C1",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomSecurityHubBatchEnableStandardsCustomResourceProviderRole1ABC8ED2": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "securityhub:BatchDisableStandards",
                    "securityhub:BatchEnableStandards",
                    "securityhub:DescribeStandards",
                    "securityhub:DescribeStandardsControls",
                    "securityhub:EnableSecurityHub",
                    "securityhub:GetEnabledStandards",
                    "securityhub:UpdateStandardsControl",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                  "Sid": "SecurityHubCreateMembersTaskSecurityHubActions",
                },
                Object {
                  "Action": Array [
                    "iam:CreateServiceLinkedRole",
                  ],
                  "Condition": Object {
                    "StringLike": Object {
                      "iam:AWSServiceName": "securityhub.amazonaws.com",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                  "Sid": "SecurityHubServiceLinkedRole",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomSsmGetParameterValueCustomResourceProviderHandlerAAD0E7EE": Object {
      "DependsOn": Array [
        "CustomSsmGetParameterValueCustomResourceProviderRoleB3AFDDB2",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomSsmGetParameterValueCustomResourceProviderRoleB3AFDDB2",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomSsmGetParameterValueCustomResourceProviderLogGroup780D220D": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "LogGroupName": Object {
          "Fn::Join": Array [
            "",
            Array [
              "/aws/lambda/",
              Object {
                "Ref": "CustomSsmGetParameterValueCustomResourceProviderHandlerAAD0E7EE",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomSsmGetParameterValueCustomResourceProviderRoleB3AFDDB2": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "ssm:GetParameters",
                    "ssm:GetParameter",
                    "ssm:DescribeParameters",
                  ],
                  "Effect": "Allow",
                  "Resource": Array [
                    "*",
                  ],
                  "Sid": "SsmGetParameterActions",
                },
                Object {
                  "Action": Array [
                    "sts:AssumeRole",
                  ],
                  "Effect": "Allow",
                  "Resource": Array [
                    Object {
                      "Fn::Join": Array [
                        "",
                        Array [
                          "arn:",
                          Object {
                            "Ref": "AWS::Partition",
                          },
                          ":iam::*:role/AWSAccelerator*",
                        ],
                      ],
                    },
                  ],
                  "Sid": "StsAssumeRoleActions",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "EbsDefaultVolumeEncryption55012F7A": Object {
      "DeletionPolicy": "Delete",
      "DependsOn": Array [
        "CustomEbsDefaultVolumeEncryptionCustomResourceProviderLogGroupB7212213",
      ],
      "Properties": Object {
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomEbsDefaultVolumeEncryptionCustomResourceProviderHandler6551B35B",
            "Arn",
          ],
        },
        "kmsKeyId": Object {
          "Fn::Select": Array [
            1,
            Object {
              "Fn::Split": Array [
                "/",
                Object {
                  "Fn::Select": Array [
                    5,
                    Object {
                      "Fn::Split": Array [
                        ":",
                        Object {
                          "Ref": "SsmParameterValueacceleratorkmskey1keyarnC96584B6F00A464EAD1953AFF4B05118Parameter",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
      "Type": "Custom::EbsDefaultVolumeEncryption",
      "UpdateReplacePolicy": "Delete",
    },
    "EbsDefaultVolumeEncryptionParameter61CF6625": Object {
      "Properties": Object {
        "Name": "/accelerator/security-stack/ebsDefaultVolumeEncryptionKeyArn",
        "Type": "String",
        "Value": Object {
          "Ref": "SsmParameterValueacceleratorkmskey1keyarnC96584B6F00A464EAD1953AFF4B05118Parameter",
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
    "GuardDutyPublishingDestination52AE4412": Object {
      "DeletionPolicy": "Delete",
      "DependsOn": Array [
        "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderLogGroup118A06DB",
      ],
      "Properties": Object {
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomGuardDutyCreatePublishingDestinationCommandCustomResourceProviderHandlerB3AE4CE8",
            "Arn",
          ],
        },
        "destinationArn": Object {
          "Fn::Join": Array [
            "",
            Array [
              "arn:",
              Object {
                "Ref": "AWS::Partition",
              },
              ":s3:::aws-accelerator-central-logs-333333333333-us-west-2/guardduty",
            ],
          ],
        },
        "exportDestinationOverride": true,
        "exportDestinationType": "S3",
        "kmsKeyArn": Object {
          "Ref": "CentralLogsBucketKeyLookup52CD8A37",
        },
        "region": "us-east-1",
      },
      "Type": "Custom::GuardDutyCreatePublishingDestinationCommand",
      "UpdateReplacePolicy": "Delete",
    },
    "IamPasswordPolicy7117FCDB": Object {
      "DeletionPolicy": "Delete",
      "DependsOn": Array [
        "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderLogGroup69C2279A",
      ],
      "Properties": Object {
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomIamUpdateAccountPasswordPolicyCustomResourceProviderHandler63EDC7F4",
            "Arn",
          ],
        },
        "allowUsersToChangePassword": true,
        "hardExpiry": false,
        "maxPasswordAge": 90,
        "minimumPasswordLength": 14,
        "passwordReusePrevention": 24,
        "requireLowercaseCharacters": true,
        "requireNumbers": true,
        "requireSymbols": true,
        "requireUppercaseCharacters": true,
      },
      "Type": "Custom::IamUpdateAccountPasswordPolicy",
      "UpdateReplacePolicy": "Delete",
    },
    "SecurityHubStandards294083BB": Object {
      "DeletionPolicy": "Delete",
      "DependsOn": Array [
        "CustomSecurityHubBatchEnableStandardsCustomResourceProviderLogGroup51D3B0EA",
      ],
      "Properties": Object {
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomSecurityHubBatchEnableStandardsCustomResourceProviderHandler4BE622C1",
            "Arn",
          ],
        },
        "region": "us-east-1",
        "standards": Array [
          Object {
            "controlsToDisable": Array [
              "IAM.1",
              "EC2.10",
              "Lambda.4",
            ],
            "enable": true,
            "name": "AWS Foundational Security Best Practices v1.0.0",
          },
          Object {
            "controlsToDisable": Array [
              "PCI.IAM.3",
              "PCI.S3.3",
              "PCI.EC2.3",
              "PCI.Lambda.2",
            ],
            "enable": true,
            "name": "PCI DSS v3.2.1",
          },
          Object {
            "controlsToDisable": Array [
              "CIS.1.20",
              "CIS.1.22",
              "CIS.2.6",
            ],
            "enable": true,
            "name": "CIS AWS Foundations Benchmark v1.2.0",
          },
        ],
      },
      "Type": "Custom::SecurityHubBatchEnableStandards",
      "UpdateReplacePolicy": "Delete",
    },
    "SsmParamAcceleratorVersionFF83282D": Object {
      "Properties": Object {
        "Name": "/accelerator/AWSAccelerator-SecurityStack-111111111111-us-east-1/version",
        "Type": "String",
        "Value": "1.3.0",
      },
      "Type": "AWS::SSM::Parameter",
    },
    "SsmParamStackId521A78D3": Object {
      "Properties": Object {
        "Name": "/accelerator/AWSAccelerator-SecurityStack-111111111111-us-east-1/stack-id",
        "Type": "String",
        "Value": Object {
          "Ref": "AWS::StackId",
        },
      },
      "Type": "AWS::SSM::Parameter",
    },
  },
}
`;
